updating dependancies and endpoints
